2008-05-21 Fix a "local variable unreferenced" bug in plotfile - MM

2008-05-19 Fix crash when Windows can not access the registry to
           determine font path [Bug 1966974, thanks Patrik Simons] - MGD

2008-05-16 removed some unneeded code w/ the python 2.4 requirement.
           cbook no longer provides compatibility for reversed,
           enumerate, set or izip.  removed lib/subprocess, mpl1,
           sandbox/units, and the swig code.  This stuff should remain
           on the maintenance branch for archival purposes. JDH

2008-05-16 Reorganized examples dir - JDH

2008-05-16 Added 'elinewidth' keyword arg to errorbar, based on patch
           by Christopher Brown - MM

2008-05-16 Added 'cumulative' keyword arg to hist to plot cumulative
           histograms. For normed hists, this is normalized to one - MM

2008-05-15 Fix Tk backend segfault on some machines - MGD

2008-05-14 Don't use stat on Windows (fixes font embedding problem) - MGD

2008-05-09 Fix /singlequote (') in Postscript backend - MGD

2008-05-08 Fix kerning in SVG when embedding character outlines - MGD

2008-05-07 Switched to future numpy histogram semantic in hist - MM

2008-05-06 Fix strange colors when blitting in QtAgg and Qt4Agg - MGD

2008-05-05 pass notify_axes_change to the figure's add_axobserver
           in the qt backends, like we do for the other backends.
           Thanks Glenn Jones for the report - DSD

2008-05-02 Added step histograms, based on patch by Erik Tollerud. - MM

2008-05-02 On PyQt <= 3.14 there is no way to determine the underlying
           Qt version. [1851364] - MGD

2008-05-02 Don't call sys.exit() when pyemf is not found [1924199] -
           MGD

2008-05-02 Update _subprocess.c from upstream Python 2.5.2 to get a
           few memory and reference-counting-related bugfixes.  See
           bug 1949978. - MGD

2008-04-30 Added some record array editing widgets for gtk -- see
           examples/rec_edit*.py - JDH
